other-vpol/check-env-vars/check-env-vars.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: check-env-vars
  annotations:
    policies.kyverno.io/title: Check Environment Variables in ValidatingPolicy
    policies.kyverno.io/severity: medium
    policies.kyverno.io/category: Other in Vpol 
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.19.1
    kyverno.io/kubernetes-version: "1.30"
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/description: >-
      Environment variables control many aspects of a container's execution and are
      often the source of many different configuration settings. Being able to ensure that
      the value of a specific environment variable either is or is not set to a specific string
      is useful to maintain such controls. This policy checks every container to ensure that if the
      `DISABLE_OPA` environment variable is defined, it must not be set to a value of `"true"`.
spec:
  evaluation:
    background:
      enabled: true
  validationActions: 
    - Audit
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  variables:
    - name: allContainers
      expression: "object.spec.containers + object.spec.?initContainers.orValue([]) + object.spec.?ephemeralContainers.orValue([])"
  validations:
    - expression: >-  
        !variables.allContainers.exists(container,
        container.?env.orValue([]).exists(e, e.name == 'DISABLE_OPA' && e.value == 'true')) ||
        exceptions.allowedValues.exists(value, value == 'DISABLE_OPA=true')
      message: "DISABLE_OPA must not be set to true."
